-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.6
-
Operating System: Debian GNU/Linux
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.6
Kernel Version: 6.0.0-5-amd64 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 1700 Eight-Core Processor
Memory: 31.1 GiB of RAM
Graphics Processor: AMD Radeon RX 460 Graphics
$ xrandr
Screen 0: minimum 320 x 200, current 1920 x 1080, maximum 16384 x 16384
DisplayPort-0 disconnected (normal left inverted right x axis y axis)
HDMI-A-0 connected primary 1920x1080+0+0 (normal left inverted right x axis y axis) 598mm x 336mm
1920x1080 60.00*+ 74.91 50.00 59.94
1680x1050 59.88
1280x1024 75.02 60.02
1440x900 59.90
1280x960 60.00
1366x768 59.79
1280x800 60.00
1152x864 75.00
1280x720 60.00 50.00 59.94
1024x768 75.03 70.07 60.00
832x624 74.55
800x600 72.19 75.00 60.32 56.25
720x576 50.00
720x480 60.00 59.94
640x480 75.00 72.81 66.67 60.00 59.94
720x400 70.08
DVI-D-0 connected (normal left inverted right x axis y axis)
1920x1080 60.00 +
1680x1050 59.88
1600x900 60.00
1280x1024 75.02 60.02
1440x900 60.00
1280x800 59.91
1152x864 75.00
1280x720 60.00
1024x768 75.03 60.00
832x624 74.55
800x600 75.00 60.32
640x480 75.00 59.94
720x400 70.08
Operating System: Debian GNU/Linux KDE Plasma Version: 5.26.4 KDE Frameworks Version: 5.100.0 Qt Version: 5.15.6 Kernel Version: 6.0.0-5-amd64 (64-bit) Graphics Platform: X11 Processors: 16 × AMD Ryzen 7 1700 Eight-Core Processor Memory: 31.1 GiB of RAM Graphics Processor: AMD Radeon RX 460 Graphics $ xrandr Screen 0: minimum 320 x 200, current 1920 x 1080, maximum 16384 x 16384 DisplayPort-0 disconnected (normal left inverted right x axis y axis) HDMI-A-0 connected primary 1920x1080+0+0 (normal left inverted right x axis y axis) 598mm x 336mm 1920x1080 60.00*+ 74.91 50.00 59.94 1680x1050 59.88 1280x1024 75.02 60.02 1440x900 59.90 1280x960 60.00 1366x768 59.79 1280x800 60.00 1152x864 75.00 1280x720 60.00 50.00 59.94 1024x768 75.03 70.07 60.00 832x624 74.55 800x600 72.19 75.00 60.32 56.25 720x576 50.00 720x480 60.00 59.94 640x480 75.00 72.81 66.67 60.00 59.94 720x400 70.08 DVI-D-0 connected (normal left inverted right x axis y axis) 1920x1080 60.00 + 1680x1050 59.88 1600x900 60.00 1280x1024 75.02 60.02 1440x900 60.00 1280x800 59.91 1152x864 75.00 1280x720 60.00 1024x768 75.03 60.00 832x624 74.55 800x600 75.00 60.32 640x480 75.00 59.94 720x400 70.08
-
-
6a3627b6c (dev), 003d30fac (6.4), 0c48e02bb (tqtc/lts-5.15), f54f2d589 (tqtc/lts-6.2)
I opened KDE Bug#461723 for this issue. There I was asked to bring this here.
Today I had Gwenview crashing with a similar backtrace, see below.
QTBUG-93067 seems kind of similar.
This seems to happen more often, if I disable my second screen. I configured it to the left of my main screen.
If I understand the function copy_unswapped right, the variable yy is kind of a resolution in y-direction - but my screens don't get somewhere near that value of 8256.
Unfortunately I don't have a way to reproduce it. I observed this one times with a dolphin process, twice a konsole and today one gwenview process.
- resulted in
-
QTBUG-110493 Initial default window size incompatibility for Xcb
-
- Closed
-
| For Gerrit Dashboard: QTBUG-109226 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 447777,5 | Set geometry property in QXcbWindow after checking minimum size | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 448059,2 | Set geometry property in QXcbWindow after checking minimum size | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 448064,2 | Set geometry property in QXcbWindow after checking minimum size | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
| 448065,2 | Set geometry property in QXcbWindow after checking minimum size | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
| 483512,1 | Set geometry property in QXcbWindow after checking minimum size | tqtc/lts-5.15-vxworks | qt/tqtc-qtbase | Status: ABANDONED | 0 | 0 |